Fix fonts and jumping issue

--- a/apps/kitchen-sink/src/components/common/Menu/Menu.scss
+++ b/apps/kitchen-sink/src/components/common/Menu/Menu.scss
@@ -38,6 +38,7 @@
         font-size: 32px;
         font-weight: 700;
         line-height: 38px;
+        font-family: "Poppins", "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
       }
 
       .subTitle {
@@ -59,6 +60,7 @@
       font-size: 24px;
       line-height: 32px;
       color: black;
+      font-family: "Poppins", "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
     }
 
     .subItemsContainer {
